tests/data/mini_script/invalid/recovery_missing_delimiters.ms
if true {
    print 1;
else {
    print 0;
}

print (1 + 2;
